update faucet endpoint, update api docs
